[package]
name = "huffman"
version = "0.1.0"
edition = "2024"

[dependencies]

# The release profile configuration comes after dependencies
[profile.release]
strip = true
opt-level = "z"       # Optimize for size
panic = "abort"       # Abort on panic to reduce binary size
lto = "fat"           # Link Time Optimization (LTO) for better performance and size

[build]
rustflags = ["-C", "link-arg=-s"] # Ensure stripping debug symbols when building

# cargo +nightly run --release -Z build-std=std,panic_abort -Z build-std-features=optimize_for_size,panic_immediate_abort
